<resources>
    <string name="app_name">Notes</string>

    <!-- The dummy note id data typed in just for design reason.
    Used in list_item_note.xml -->
    <string name="dummy_note_id">1</string>
    <!-- The dummy note title data typed in just for design reason.
    Used in list_item_note.xml -->
    <string name="dummy_note_title">Jogging in park</string>
    <!-- The empty message shows up on the main screen if the data fetched back is empty.
    Used in activity_main.xml, initially invisible. -->
    <string name="empty_data">Yon don\'t have any notes yet.</string>

    <!-- The label of note's id shows up on the detail screen.
    Used in activity_detail.xml -->
    <string name="note_id_label">Id: </string>
    <!-- The label of note's title shows up on the detail screen.
    Used in activity_detail.xml -->
    <string name="note_title_label">Title: </string>
    <!-- The label of note's description shows up on the detail screen.
    Used in activity_detail.xml -->
    <string name="note_description_label">Description: </string>
    <!-- The dummy data of note's id shows up on the detail screen.
    Used in activity_detail.xml -->
    <string name="note_id_dummy_data">3</string>
    <!-- The dummy data of note's title shows up on the detail screen.
    Used in activity_detail.xml -->
    <string name="note_title_dummy_data">Buy cheese and bread for breakfast.</string>
    <!-- The dummy data of note's description shows up on the detail screen.
    Used in activity_detail.xml -->
    <string name="note_description_dummy_data">Needed for breakfast must be done by 8 am tomorrow!</string>

    <!-- Menu item title of action save on the menu bar of detail activity.
    Used in menu_detail_activity.xml -->
    <string name="action_save">Save</string>
    <!-- Menu item title of action delete on the menu bar of detail activity.
    Used in menu_detail_activity.xml -->
    <string name="action_delete">Delete</string>

    <!-- Toast message pop up on detail screen if a user wants to save a note without providing title
    or without providing description.
    Used in DetailActivity.java -->
    <string name="toast_create_note_title_description_cannot_be_empty">Please create a new note with title and description.</string>
    <!-- Toast message pop up on detail screen if a user wants to save an edited note without
    providing title or without providing description.
    Used in DetailActivity.java -->
    <string name="toast_update_note_title_description_cannot_be_empty">Please update a new note with title and description.</string>
    <!-- Toast message pop up on detail screen if the POST/PUT method with Retrofit get onFailure callback,
    which means save new note/update existing note failed.
    Used in DetailActivity.java -->
    <string name="toast_retrofit_post_put_on_failure">Something went wrong.:( Save failed. Please try again.</string>
    <!-- Toast message pop up on detail screen if the DELETE method with Retrofit get onFailure callback,
    which means delete existing note failed.
    Used in DetailActivity.java -->
    <string name="toast_retrofit_delete_on_failure">Something went wrong.:( Delete failed. Please try again.</string>
    <!-- Toast message pop up on main/detail screen if the GET(list of notes or one note) method with
    Retrofit get onFailure callback, which means get notes list/one note failed.
    Used in MainActivity.java(GET notes list) and DetailActivity.java(GET one note) -->
    <string name="toast_retrofit_get_on_failure">Something went wrong.:( Please try again.</string>

    <!-- setTitle for Detail Activity when adding a note.
    Used in DetailActivity.java -->
    <string name="set_detail_activity_title_add_a_note">Add a note</string>
    <!-- setTitle for Detail Activity when editing a note.
    Used in DetailActivity.java -->
    <string name="set_detail_activity_title_edit_a_note">Edit a note</string>
</resources>
